--- a/server/package.json
+++ b/server/package.json
@@ -7,5 +7,10 @@
     "express": "^4.18.1",
     "mongoose": "^6.6.1",
     "nodemon": "^2.0.20"
+  },
+  "scripts": {
+    "start": "nodemon",
+    "dev": "nodemon server.js"
   }
 }
+
