--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "main": "server.js",
   "license": "MIT",
   "dependencies": {
+    "colors": "^1.4.0",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.6.1",
     "nodemon": "^2.0.20"
@@ -13,4 +15,3 @@
     "dev": "nodemon server.js"
   }
 }
-
