--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "colors": "^1.4.0",
+    "cores": "^0.8.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.6.1",
