--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.2.1",
     "cores": "^0.8.5",
     "init": "^0.1.2",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-collapsed": "^3.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
