--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "cores": "^0.8.5",
     "init": "^0.1.2",
+    "jsonwebtoken": "^8.5.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-collapsed": "^3.4.0",
