--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "main": "server.js",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "colors": "^1.4.0",
     "cores": "^0.8.5",
     "cors": "^2.8.5",
