--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
-    "nodemon": "^2.0.20"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.20",
+    "path": "^0.12.7"
   },
   "scripts": {
     "start": "nodemon",
