--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,12 @@
     "react-collapsed": "^3.4.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.2.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
